--- a/frontend/app/modules/decks/cartas.html
+++ b/frontend/app/modules/decks/cartas.html
@@ -47,13 +47,19 @@
     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
 
         <div class="row">
-
-        <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
-            <b class="deckTitle"> <input type="text" class="form-control" ng-model="vm.form.nome"></b>
+            <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
+                <b class="deckTitle"> <input type="text" class="form-control" ng-model="vm.form.nome"></b>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+                <button type="button" class="btn btn-success pull-right btn-block" ng-click="vm.save()"><i class="glyphicon glyphicon-floppy-disk"></i> Salvar</button>
+            </div>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-            <button type="button" class="btn btn-success pull-right btn-block" ng-click="vm.save()">salvar alterações</button>
-        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="alert alert-primary">
+                    <strong>* Não esqueça de salvar as alterações sempre.</strong>
+                </div>
+            </div>
         </div>
         <table class="table table-hover">
             <thead>
@@ -78,7 +84,7 @@
                         <button class="btn-sm btn btn-primary" ng-click="vm.diminui(carta)"><i class="glyphicon glyphicon-minus"></i></button>
                     </td>
                     <td>{{carta.name}}</td>
-                    <td>{{carta.type}}</td>
+                    <td>{{carta.originalType}}</td>
                     <td>{{carta.manaCost}}</td>
                 </tr>
             </tbody>
